one codec module for each asn.1 module

--- a/ebin/Makefile.am
+++ b/ebin/Makefile.am
@@ -6,12 +6,33 @@ appdir = $(beamdir)
 app_DATA = map.app
 EXTRA_DIST = map.app
 
-beam_DATA = map_codec.beam
+beam_DATA = MAP-Protocol.beam \
+		MAP-CommonDataTypes.beam \
+		MAP-MS-DataTypes.beam \
+		MAP-CH-DataTypes.beam \
+		MAP-SM-DataTypes.beam \
+		MAP-GR-DataTypes.beam \
+		MAP-SS-DataTypes.beam \
+		MAP-LCS-DataTypes.beam \
+		MAP-ER-DataTypes.beam \
+		MAP-OM-DataTypes.beam \
+		MAP-ExtensionDataTypes.beam \
+		MAP-BS-Code.beam \
+		MAP-TS-Code.beam \
+		MAP-SS-Code.beam \
+		MAP-Errors.beam \
+		MAP-DialogueInformation.beam \
+		MAP-ApplicationContexts.beam \
+		MAP-MobileServiceOperations.beam \
+		MAP-CallHandlingOperations.beam \
+		MAP-ShortMessageServiceOperations.beam \
+		MAP-Group-Call-Operations.beam \
+		MAP-LocationServiceOperations.beam \
+		MAP-SupplementaryServiceOperations.beam \
+		MAP-OperationAndMaintenanceOperations.beam \
+		MobileDomainDefinitions.beam
 
-map_codec.beam:	$(top_builddir)/src/map_codec.erl
-	$(ERLC) $(ERLCFLAGS) $<
-
-%.beam:	$(top_srcdir)/src/%.erl
+%.beam:	$(top_builddir)/src/%.erl
 	$(ERLC) $(ERLCFLAGS) -I $(top_builddir)/src $<
 
 %.app:   %.app-in
