--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@
 ##
 AC_INIT([map], [1.0.2], [issues@sigscale.org])
 AC_COPYRIGHT([Copyright (c) 2021 SigScale Global Inc.])
-AC_PREREQ(2.63)
+AC_PREREQ(2.64)
 #AC_CONFIG_SRCDIR([src/map_app.erl])
 AC_CONFIG_HEADERS([config.h])
 AC_LANG([Erlang])
@@ -59,8 +59,8 @@ AC_SUBST(asndir)
 AC_ERLANG_SUBST_ERTS_VER
 AC_ERLANG_CHECK_LIB([kernel], [], [AC_MSG_ERROR([kernel was not found!])])
 AC_ERLANG_CHECK_LIB([stdlib],
-		[if echo -e "$ERLANG_LIB_VER_stdlib\n3.5" | sort -CV;
-		then AC_MSG_ERROR([>= stdlib-3.5 required!]); fi],
+		[AS_VERSION_COMPARE([$ERLANG_LIB_VER_stdlib], ["3.5"],
+				[AC_MSG_ERROR([>= stdlib-3.5 required!])])],
 		[AC_MSG_ERROR([stdlib was not found!])])
 AC_ERLANG_CHECK_LIB([asn1], [], [AC_MSG_ERROR([asn1 was not found!])])
 AC_ERLANG_CHECK_LIB([tcap], [], [AC_MSG_ERROR([tcap was not found!])])
