--- a/configure.ac
+++ b/configure.ac
@@ -40,17 +40,21 @@ AC_PROG_MKDIR_P
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_ERLANG_SUBST_INSTALL_LIB_DIR
+otpdir=$ERLANG_INSTALL_LIB_DIR/..
 appdir=$ERLANG_INSTALL_LIB_DIR/$PACKAGE_NAME-$PACKAGE_VERSION
 docdir=$ERLANG_INSTALL_LIB_DIR/$PACKAGE_NAME-$PACKAGE_VERSION/doc
 erldir=$ERLANG_INSTALL_LIB_DIR/$PACKAGE_NAME-$PACKAGE_VERSION/src
 beamdir=$ERLANG_INSTALL_LIB_DIR/$PACKAGE_NAME-$PACKAGE_VERSION/ebin
 asndir=$ERLANG_INSTALL_LIB_DIR/$PACKAGE_NAME-$PACKAGE_VERSION/asn_src
 eincludedir=$ERLANG_INSTALL_LIB_DIR/$PACKAGE_NAME-$PACKAGE_VERSION/include
+reldir=$ERLANG_INSTALL_LIB_DIR/../releases
+AC_SUBST(otpdir)
 AC_SUBST(appdir)
 AC_SUBST(erldir)
 AC_SUBST(beamdir)
 AC_SUBST(eincludedir)
 AC_SUBST(asndir)
+AC_SUBST(reldir)
 
 
 ##
@@ -62,6 +66,7 @@ AC_ERLANG_CHECK_LIB([stdlib],
 		[AS_VERSION_COMPARE([$ERLANG_LIB_VER_stdlib], ["3.5"],
 				[AC_MSG_ERROR([>= stdlib-3.5 required!])])],
 		[AC_MSG_ERROR([stdlib was not found!])])
+AC_ERLANG_CHECK_LIB([sasl], [], [AC_MSG_ERROR([sasl was not found!])])
 AC_ERLANG_CHECK_LIB([asn1], [], [AC_MSG_ERROR([asn1 was not found!])])
 AC_ERLANG_CHECK_LIB([tcap], [], [AC_MSG_ERROR([tcap was not found!])])
 
@@ -86,5 +91,5 @@ AC_ERLANG_CHECK_LIB([tcap], [], [AC_MSG_ERROR([tcap was not found!])])
 ## Output:  create output files
 ##
 
-AC_OUTPUT([Makefile src/Makefile asn_src/Makefile ebin/Makefile doc/Makefile])
-
+AC_OUTPUT([Makefile src/Makefile asn_src/Makefile ebin/Makefile
+		doc/Makefile sys.config $PACKAGE_NAME.rel])
