--- a/configure.ac
+++ b/configure.ac
@@ -67,6 +67,8 @@ AC_ERLANG_CHECK_LIB([stdlib],
 				[AC_MSG_ERROR([>= stdlib-3.5 required!])])],
 		[AC_MSG_ERROR([stdlib was not found!])])
 AC_ERLANG_CHECK_LIB([sasl], [], [AC_MSG_ERROR([sasl was not found!])])
+AM_CONDITIONAL([MAKE_TAR_EXTRA_FILES],
+		[AS_VERSION_COMPARE([$ERLANG_LIB_VER_sasl], ["4.0"], [false], [true], [true])])
 AC_ERLANG_CHECK_LIB([asn1], [], [AC_MSG_ERROR([asn1 was not found!])])
 AC_ERLANG_CHECK_LIB([tcap], [], [AC_MSG_ERROR([tcap was not found!])])
 
@@ -91,5 +93,5 @@ AC_ERLANG_CHECK_LIB([tcap], [], [AC_MSG_ERROR([tcap was not found!])])
 ## Output:  create output files
 ##
 
-AC_OUTPUT([Makefile src/Makefile asn_src/Makefile ebin/Makefile
-		doc/Makefile sys.config $PACKAGE_NAME.rel])
+AC_OUTPUT([Makefile src/Makefile asn_src/Makefile ebin/Makefile doc/Makefile
+		sys.config $PACKAGE_NAME.rel ebin/$PACKAGE_NAME.appup])
